<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/ShowShape"
    tools:context=".ui.show.ShowActivity">

    <ImageView
        android:id="@+id/show_imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/ShowShape"
        android:contentDescription="@string/describe_show_image"
        android:scaleType="centerCrop"
        android:transitionName="image"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/show_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shape_top_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/show_download"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_vertical"
                android:layout_marginEnd="8dp"
                android:layout_weight="4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/show_textView_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="2dp"
                    android:text="@string/app_name"
                    android:textColor="?attr/ShowTitle"
                    android:textIsSelectable="true"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:transitionName="user_name" />

                <TextView
                    android:id="@+id/show_textView_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="1dp"
                    android:text="@string/show_location"
                    android:textColor="?attr/ShowSecondary"
                    android:textIsSelectable="true" />
            </LinearLayout>

            <ImageView
                android:id="@+id/show_imageView_head"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/layer_shape_head"
                android:contentDescription="@string/describe_show_head"
                android:transitionName="user_head" />

        </LinearLayout>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/show_download"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/ripple_button_download"
            android:text="@string/show_download"
            android:textAllCaps="false"
            android:textColor="@color/colorMyWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:spinning_bar_color="@color/colorMyWhite"
            app:spinning_bar_padding="8dp"
            app:spinning_bar_width="3dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintGuide_percent="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>