<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_top_white"
    android:backgroundTint="#FFFFFFFF">

    <TextView
        android:id="@+id/dialog_textView_emoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/about_developer_reward_emoji"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_QRcode"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/describe_icon"
        app:layout_constraintBottom_toTopOf="@+id/imageView_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_textView_emoji"
        app:srcCompat="@drawable/wechat_pay_qrcode" />

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/describe_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView_QRcode"
        app:srcCompat="@drawable/wechat_pay_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/about_developer_reward_wechatpay"
        android:textAlignment="center"
        android:textColor="#FF000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_logo"
        app:layout_constraintEnd_toEndOf="@+id/imageView_QRcode"
        app:layout_constraintStart_toEndOf="@+id/imageView_logo"
        app:layout_constraintTop_toTopOf="@+id/imageView_logo" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/dialog_imageView_lottie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_rawRes="@raw/lottie_reward" />

</androidx.constraintlayout.widget.ConstraintLayout>